--- a/css/index.css
+++ b/css/index.css
@@ -4,3 +4,5 @@
 @import url('./sections/maincontent.css');
 @import url('./sections/footer.css');
 @import url('./sections/company.css');
+@import url('./sections/intro.css');
+@import url('./sections/teamstyles.css');
