--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -53,6 +53,10 @@
     padding: 12px 16px;
     z-index: 1;
     text-align: left;
+    opacity: 0;
+    -webkit-transition: opacity linear 2s;
+    -moz-transition: opacity linear 2s;
+    transition: opacity linear 2s;
 }
 .dropdown__triangle {
     position: absolute;
@@ -72,6 +76,8 @@
 .dropdown:hover .dropdown__content {
     display: block;
     left: initial;
+    opacity: 1;
+    /* transition: opacity 2s; */
 }
 .workHours {
     color: #1c5bc3;
