--- a/css/sections/header.css
+++ b/css/sections/header.css
@@ -8,9 +8,9 @@
     margin-top: 21px;
 }
 .info {
+    float: right;
     padding-top: 15px;
-    padding-bottom: 14px;
-    text-align: right;
+    /* padding-bottom: 14px; */
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
 }
