--- a/css/sections/maincontent.css
+++ b/css/sections/maincontent.css
@@ -25,38 +25,37 @@
     width: 920px;
     float: right;
     margin-bottom: 24px;
+    margin-top: -44px;
 }
 .main__title {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-style: bold;
     font-size: 49px;
-    margin-bottom: 40px;
-    margin-left: 40px;
+    transform: translate(65px,150px)
 }
 
 .main--position {
     width: 879px;
     margin-bottom: 87px;
     float: right;
-    margin-top: -186px;
-    margin-left: 50px;
 }
 .main__header {
     width: 879px;
+    height: 354px;
     background-image: url(../../img/clouds.png);
     /* background-position: center center; */
     background-position-y: -76px;
     background-color: #fff;
     filter: brightness(110%);
     opacity: .8;
-    margin-bottom: -20px;
+    margin-bottom: 25px;
 }
-.main__title--position {
+/* .main__title--position {
     position: relative;
     top: -43px;
     height: 354px;
     width: 879px;
     left: 26px;
     top: 150px;
-}
+} */
