--- a/css/index.css
+++ b/css/index.css
@@ -6,3 +6,4 @@
 @import url('./sections/company.css');
 @import url('./sections/intro.css');
 @import url('./sections/teamstyles.css');
+@import url('./sections/feedback.css');
