--- a/css/sections/maincontent.css
+++ b/css/sections/maincontent.css
@@ -27,7 +27,7 @@
     margin-bottom: 24px;
     /* margin-top: -44px; */
 }
-.main__title {
+.main__title, .post__title {
     font-family: 'Roboto', sans-serif;
     font-weight: 700;
     font-style: bold;
