--- a/css/sections/feedback.css
+++ b/css/sections/feedback.css
@@ -147,16 +147,66 @@
 .radio {
     width: 23px;
     height: 23px;
-    vertical-align: middle;
+    /* vertical-align: middle; */
     background-color: #fff; 
-    /* position: absolute; */
-    /* left: 9999px; */
+    /* display: none; */
+    position: absolute;
+    left: 5px;
 }
 .radio__label {
+    width: 50px;
+    height: 24px;
+    /* background-color: #fff; */
+    display: inline-block;
+    /* border: 1px solid #c9c9c9; */
+    /* border-radius: 50%; */
     color: #1c5bc3;
-    font-family: Roboto;
-    font-size: 14px;
-    font-weight: 300;
+    position: relative;
+    
+}
+.bigcircle {
+    width: 20px;
+    height: 20px;
+    background-color: #fff;
+    display: block;
+    border: 1px solid #c9c9c9;
+    border-radius: 50%;
+    color: #1c5bc3;
+    position: relative;
+    vertical-align: middle;
+}
+.radio__label:hover {
+    /* background-color: #fff; */
+    /* border: 1px solid #1c5bc3; */
+}
+.circle {
+    width: 10px;
+    height: 10px;
+    background-color: #1c5bc3;
+    color: #fff;
+    display: inline-block;
+    border-radius: 50%;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%,-50%);
+    display: none;
+}
+.radio__label:hover .circle {
+    display: inline-block;
+}
+
+
+/* input[type=radio]:checked .cirle {
+    display: inline-block;
+} */
+.radio__text {
+    display: inline-block;
+    transform: translate(120%,0%);
+    color: #221f1f;
+}
+.radio__label:hover .radio__text {
+    color: #1c5bc3;
 }
 .submit {
     position: relative;
