--- a/css/sections/feedback.css
+++ b/css/sections/feedback.css
@@ -157,12 +157,19 @@
     background-color: #fff; 
     display: none;
     position: absolute;
-    left: -9999px;
+    right: 150px;
+    /* left: -9999px; */
 }
-input:checked {
+.radio:checked + .bigcircle {
+    border-color: #1c5bc3; 
+}
+.radio:checked + .bigcircle .circle {
     display: inline-block;
-}
 
+}
+.radio:checked + .bigcircle .radio__text {
+    color: #1c5bc3;
+}
 .radio__label {
     width: 50px;
     height: 24px;
@@ -172,7 +179,6 @@ input:checked {
     /* border-radius: 50%; */
     color: #1c5bc3;
     position: relative;
-    
 }
 .bigcircle {
     width: 20px;
@@ -185,10 +191,7 @@ input:checked {
     position: relative;
     vertical-align: middle;
 }
-.radio__label:hover {
-    /* background-color: #fff; */
-    /* border: 1px solid #1c5bc3; */
-}
+
 .circle {
     width: 10px;
     height: 10px;
@@ -205,11 +208,9 @@ input:checked {
 .radio__label:hover .circle {
     display: inline-block;
 }
-
-
-/* input[type=radio]:checked .cirle {
-    display: inline-block;
-} */
+.radio__label:hover .bigcircle {
+    border-color: #1c5bc3; 
+}
 .radio__text {
     display: inline-block;
     transform: translate(25px,0);
