--- a/css/layout/base.css
+++ b/css/layout/base.css
@@ -2,6 +2,7 @@ html, body {
     width: 100%;
     height: 100%;
     min-height: 100vh;
+    /* box-sizing: border-box; */
 }
 ul {
     padding: 0;
