--- a/css/sections/feedback.css
+++ b/css/sections/feedback.css
@@ -9,12 +9,13 @@
 }
 .opinion {
     border-bottom: 2px solid #f5f5f5;
-    padding-top: 32px;
+    padding-top: 25px;
     width: 883px;
+    padding-bottom: 7px;
     /* width: 900px; */
 }
 .opinion:first-of-type {
-    padding-top: 38px;
+    padding-top: 34px;
 }
 .opinion__photo {
     width: 160px;
@@ -22,10 +23,12 @@
     clip-path: circle(80px at 50% 50%);
     float: left;
     margin-right: 20px;
+    margin-top: 6px;
     /* margin-bottom: 28px; */
 }
 .opinion:last-of-type {
     border: none;
+    margin-bottom: -11px;
 }
 .customer {
     width: 695px;
@@ -39,6 +42,7 @@
     font-size: 14px;
     font-weight: 300;
     line-height: 21px;
+    /* margin-top: -5px; */
     margin-bottom: 5px;
 }
 .customer__name {
@@ -54,16 +58,14 @@
 }
 
 .pagination {
-    margin-left: -18px;
     display: inline-block;
     font-family: Roboto;
     font-size: 0px;
     vertical-align: middle;
-    position: relative;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    margin-bottom: 62px;
+    width: 46%;
+    margin-bottom: 70px;
+    margin-left: 28%;
+    margin-right: 36%;
 }
 .pagination__current {
     font-size: 14px;
@@ -73,16 +75,24 @@
     float: left;
     margin-right: 14px;
 }
-
+.pagination__item {
+    width: 28px;
+    height: 28px;
+}
 .pagination a {
     color: black;
-    padding: 4px 8px;
+    /* padding: 4px 8px; */
+    padding-top: 4px; 
+    padding-left: 9px;
+    padding-bottom: 4px;
+    padding-right: 8px;
+
     text-decoration: none;
     transition: background-color .3s;
     font-size: 14px;
     font-weight: 700;
     border-radius: 3px;
-    line-height: 21px;
+    /* line-height: 21px; */
 }
 .pagination a:first-of-type {
     color: #bebdbd;
@@ -107,27 +117,31 @@
     padding-bottom: 49px;
     padding-left: 69px;
     display: block;
+    margin-left: 40px;
 }
 .post__title {
     margin-bottom: 19px;
 }
 .post__left {
     display: inline-block;
-    width:50%;
-    /* margin-right: 120px; */
+    /* position: relative; */
+    width: 50%;
     float: left;
 }
-.post__rigth {
+.post__right {
     display: inline-block;
+    /* position: relative; */
     width: 50%;
-    /* float: right; */
+    float: left;
+    overflow: hidden;
+
 }
 .post__input {
     color: #221f1f;
     font-family: Roboto;
     font-size: 14px;
     font-weight: 300;
-    width: 255px;
+    width: 200px;
     height: 42px;
     background-color: #fff;
     padding-left: 11px;
@@ -147,9 +161,11 @@
     font-family: Roboto;
     font-size: 14px;
     font-weight: 300;
+    width: 200px;
     margin: 0;
     padding-bottom: 7px;
 }
+
 .radio {
     width: 23px;
     height: 23px;
