--- a/css/sections/feedback.css
+++ b/css/sections/feedback.css
@@ -24,6 +24,7 @@
     float: left;
     margin-right: 20px;
     margin-top: 6px;
+    background-color: #f5f5f5;
     /* margin-bottom: 28px; */
 }
 .opinion:last-of-type {
@@ -34,7 +35,7 @@
     width: 695px;
     min-height: 188px;
     color: #221f1f;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     margin-left: 160px;
 }
 .customer__date {
@@ -59,7 +60,7 @@
 
 .pagination {
     display: inline-block;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;    
     font-size: 0px;
     vertical-align: middle;
     width: 46%;
@@ -114,56 +115,64 @@
     background-color: #f5f5f5;
     padding-top: 43px;
     padding-right: 70px;
-    padding-bottom: 49px;
+    padding-bottom: 102px;
     padding-left: 69px;
     display: block;
     margin-left: 40px;
 }
 .post__title {
-    margin-bottom: 19px;
+    margin-bottom: 4px;
 }
 .post__left {
     display: inline-block;
-    /* position: relative; */
-    width: 50%;
     float: left;
+    margin-bottom: 22px;
 }
 .post__right {
     display: inline-block;
-    /* position: relative; */
-    width: 50%;
     float: left;
-    overflow: hidden;
-
+    margin-left: 22px;
+    margin-bottom: 22px;
 }
 .post__input {
     color: #221f1f;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-weight: 300;
-    width: 200px;
+    width: 258px;
     height: 42px;
     background-color: #fff;
     padding-left: 11px;
     border: none;
 }
+.post__input:focus {
+    border-color: #1c5bc3;
+}
+
 .post__middle {
     width: 100%;
-    margin-bottom: 17px;
 }
 .post__input--middle {
-    width: 100%;
-    /* width: 564px; */
-    height: 93px;
+    width: 98%;
+    height: 84px;
+    resize: none;
 }
 .post__question {
     color: #000;
-    font-family: Roboto;
+    font-family: 'Roboto', sans-serif;
     font-size: 14px;
     font-weight: 300;
-    width: 200px;
+    margin-bottom: 5px;
+    /* width: 200px;
     margin: 0;
-    padding-bottom: 7px;
+    padding-bottom: 7px; */
+}
+.post__select {
+    margin-top: 2px;
+    float: left;    
+}
+.post__button {
+    float: right;
 }
 
 .radio {
@@ -189,16 +198,15 @@
 .radio__label {
     width: 50px;
     height: 24px;
-    /* background-color: #fff; */
     display: inline-block;
-    /* border: 1px solid #c9c9c9; */
-    /* border-radius: 50%; */
     color: #1c5bc3;
     position: relative;
+    margin-top: 3px;
+    margin-right: 9px;
 }
 .bigcircle {
-    width: 20px;
-    height: 20px;
+    width: 18px;
+    height: 18px;
     background-color: #fff;
     display: block;
     border: 1px solid #c9c9c9;
@@ -209,8 +217,8 @@
 }
 
 .circle {
-    width: 10px;
-    height: 10px;
+    width: 8px;
+    height: 8px;
     background-color: #1c5bc3;
     color: #fff;
     display: inline-block;
@@ -228,6 +236,13 @@
     border-color: #1c5bc3; 
 }
 .radio__text {
+    font-family: 'Roboto', sans-serif;
+
+    width: 17px;
+    height: 12px;
+    font-size: 14px;
+    font-weight: 300;
+
     display: inline-block;
     transform: translate(25px,0);
     color: #221f1f;
@@ -238,6 +253,7 @@
 .submit {
     position: relative;
     left: 9999px;
+    display: none;
 }
 .submit__button {
     font-family: "Roboto", sans-serif;
