--- a/css/sections/feedback.css
+++ b/css/sections/feedback.css
@@ -21,6 +21,7 @@
     width: 160px;
     display: inline-block;
     clip-path: circle(80px at 50% 50%);
+    border-radius: 80px;
     float: left;
     margin-right: 20px;
     margin-top: 6px;
